test/dumpExit2.slq
// args: --run

def main(){
	x:=0:ğ”¹;
	z:=0:!â„•;
	def foo(){
		y:=H(z coerce ğ”¹);
		dump();
		exit(); // error
		return y;
	}
	z=2;
	return foo();
}
